<?xml version="1.0"?>
<!--
/*
 * Copyright 2013 NGDATA nv
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <properties>
    <version.sep>1.0-SNAPSHOT</version.sep>

    <!-- Tells maven plugins what file encoding to use -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.ngdata</groupId>
  <artifactId>hbase-search</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>HBase Search</name>

  <url>http://www.ngdata.com/</url>

  <licenses>
    <license>
      <name>Apache 2</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>Copyright 2013 by NGDATA nv</comments>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git@github.com:NGDATA/hbase-search.git</connection>
    <url>scm:git:git@github.com:NGDATA/hbase-search.git</url>
    <developerConnection>scm:git:git@github.com:NGDATA/hbase-search.git</developerConnection>
  </scm>

  <dependencyManagement>
    <dependencies>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>lilyproject.snapshot</id>
      <name>Lily Maven snapshot repository</name>
      <url>http://lilyproject.org/maven/maven2/dev/</url>
    </repository>

    <repository>
      <id>default</id>
      <name>Maven Repository Switchboard</name>
      <layout>default</layout>
      <url>http://repo1.maven.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>central</id>
      <name>Maven Plugin Repository</name>
      <url>http://repo1.maven.org/maven2/</url>
      <layout>default</layout>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <updatePolicy>never</updatePolicy>
      </releases>
    </pluginRepository>
  </pluginRepositories>


  <distributionManagement>
    <repository>
      <id>org.lilyproject.maven-deploy</id>
      <name>Lily deploy repository</name>
      <url>scp://lilyproject.org/var/www/lilyproject.org/maven/maven2/deploy</url>
    </repository>
    <snapshotRepository>
      <id>org.lilyproject.maven-snapshot</id>
      <name>Lily dev repository</name>
      <url>scp://lilyproject.org/var/www/lilyproject.org/maven/maven2/dev</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ssh</artifactId>
        <version>2.0</version>
      </extension>
    </extensions>

    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>1.6</source>
            <target>1.6</target>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.9</version>
          <configuration>
            <forkMode>always</forkMode>
            <argLine>-Xmx1000m -XX:MaxPermSize=128m ${argLine}</argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
